--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body{
 }
 H1 {
   font-family: "Crimson Text", sans-serif;
+  /* font-family: "Inter", sans-serif; */
 }
 /*  */
 .scroll-container {
@@ -40,23 +41,88 @@ H1 {
 }
 
 /*  */
+body {
+  margin: 0;
+  background-color: #0d0d0d;
+  color: #f3f4f6;
+  font-family: 'Inter', sans-serif;
+  overflow-x: hidden;
+  padding: 0;
+  width: 100%;
+  padding-bottom: 0;
+}
+
+.main {
+  width: 100%;
+  padding-top: 0;
+  margin-top: 0;
+}
+
+/* Preloader Styles */
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  display: flex;
+  /* display: none; */
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.loader-word {
+  font-size: clamp(2rem, 5vw, 4rem);
+  font-weight: 800;
+  text-transform: uppercase;
+  color: transparent;
+  -webkit-text-stroke: 1px #f3f4f6;
+  opacity: 0;
+  position: absolute;
+}
+
+.loader-final {
+  font-size: clamp(2rem, 5vw, 4rem);
+  font-weight: 800;
+  text-transform: uppercase;
+  color: #f3f4f6;
+  opacity: 0;
+  position: absolute;
+}
+
+/* Loader */
+.white {
+  /* display: none; */
+  z-index: 9999;
+  width: 100%;
+  position: absolute;
+  top: 100%;
+  height: 1000vh;
+  background: linear-gradient(to bottom, #000, rgb(205, 83, 132), rgb(130, 42, 144));
+  ;
+}
 header {
     position: sticky;
     top: 0;
     z-index: 1000;
     backdrop-filter: saturate(140%) blur(8px);
     background: linear-gradient(to bottom, rgba(10, 10, 10, .85), rgba(10, 10, 10, .55));
-    border-bottom: 1px solid rgba(255, 255, 255, .08);
+    border-bottom: 0px solid rgba(255, 255, 255, .08);
+    flex-direction: row;
 }
 
 .nav {
-    max-width: 1200px;
-    margin: 0 auto;
+    margin: 0;
     height: 72px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 18px;
+    z-index: 1000;
+    padding: 0 18px;
+    width : 100%;
 }
 
 .brand {
@@ -91,6 +157,7 @@ header {
   display: flex;
   gap: 28px;
   align-items: center;
+  z-index: 1000;
 }
 
 .links .nav-text {
@@ -214,6 +281,7 @@ header {
   border-radius: 10px;
   cursor: pointer
 }
+
 .aboutpic {
   width: 100%;
   opacity: 15%;
